--- a/eamena/eamena/templates/search.htm
+++ b/eamena/eamena/templates/search.htm
@@ -117,7 +117,7 @@
                         <li><a href="javascript:void(0);" id="view-saved-searches">{% trans "View Popular Searches" %}</a></li>
                         <li class="divider"></li>
                         {% if 'edit' in user.user_groups %}
-                        <li><a class="dataexport" id="shp" href="" target="_blank">{% trans "Export results to .SHP" %}</a></li>
+                        <li><a class="dataexport" id="shp" href="" target="_blank" onclick="return confirm('Warning: Shapefile export will truncate attributes to 250 characters')">{% trans "Export results to .SHP" %}</a></li>
                         <li><a class="dataexport" id="csv" href="" target="_blank">{% trans "Export results to .CSV" %} </a></li>
                         <li><a class="dataexport" id="kml" href="" target="_blank">{% trans "Export results to .KML" %} </a></li>
                         <li><a class="dataexport" id="json" href="" target="_blank">{% trans "Export results to .JSON" %} </a></li>
