Cropped and lowered the quality of homepage images to reduce file size and set logo to be more responsive to screen size

--- a/arches/app/media/css/main.css
+++ b/arches/app/media/css/main.css
@@ -292,10 +292,22 @@ body {
     padding: 0 10px 0px;
 }
 
+@media (max-width: 1200px) {
+    .header .navbar-brand {
+        top: -20px;
+    }
+}
+
 @media (max-width: 992px) {
     .header .navbar-brand { 
-        top: 0;
-        height: 80px;
+        top: -40px;
+    }
+}
+
+@media (max-width: 767px) {
+    .header .navbar-brand {
+        height: auto;
+        top: -10px;
     }
 }
 
