--- a/eamena/eamena/templates/index.htm
+++ b/eamena/eamena/templates/index.htm
@@ -51,7 +51,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <div class="ls-layer">
                 
                 <!-- Background -->
-                <img src="{% static 'img/BahlaFort_Oman_2015_JB.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
+                <img src="{% static 'img/BahlaFort_Oman_2015_JB_cropped.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
                     
                     <!-- Text -->
                     <span class="ls-s-s1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
@@ -71,7 +71,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <div class="ls-layer" style="">
                 
                 <!-- Background -->
-                <img src="{% static 'img/Libya_Sabratha_Temple_of_Isis.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
+                <img src="{% static 'img/Libya_Sabratha_Temple_of_Isis_small.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
                     
                     <!-- Text -->
                     <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
@@ -92,7 +92,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <div class="ls-layer" style="">
                 
                 <!-- Background -->
-                <img src="{% static 'img/Persepolis_ApadanaPalace_AZ.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
+                <img src="{% static 'img/Persepolis_ApadanaPalace_AZ_small.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
                     
                     <!-- Text -->
                     <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
@@ -109,32 +109,12 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     </div>
             <!--End Third Slide-->
             
-          <!--Fourth Slide-->
-            <div class="ls-layer" style="">
-                
-                <!-- Background -->
-                <img src="{% static 'img/TempleofObelisks_Byblos_Lebanon_2016_JB.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
-                    
-                    <!-- Text -->
-                    <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
-                        {% trans 'Endangered Archaeology in the Middle East and North Africa' %} </br>
-                     الآثار المهددة في الشرق الأوسط و شمال إفريقيا  
-
-                    </span>
-                    
-                    <!-- Photo Credit -->
-                    <span class="ls-s-1" style="line-height: 16px; font-size:12px; color:#fff; top:670px; left: 750px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;background-color: #585f69;">
-                        {% trans 'Photo: Temple of the Obelisks (Byblos, Lebanon) ' %}<a href="javascript:void(0);" style='color:#fff;'>{% trans '© Jennie Bradbury' %}</a>
-                    </span>
-                    
-                    </div>
-            <!--End Fourth Slide-->
 
           <!--Fifth Slide-->
             <div class="ls-layer" style="">
                 
                 <!-- Background -->
-                <img src="{% static 'img/Tunisia_Dougga_Capitolium_NS.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
+                <img src="{% static 'img/Tunisia_Dougga_Capitolium_NS_cropped.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
                     
                     <!-- Text -->
                     <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
@@ -155,7 +135,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <div class="ls-layer" style="">
                 
                 <!-- Background -->
-                <img src="{% static 'img/Petra_AZ.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
+                <img src="{% static 'img/Petra_AZ_cropped.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
                     
                     <!-- Text -->
                     <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
@@ -172,109 +152,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     </div>
             <!--End Sixth Slide-->
             
-          <!--Seventh Slide-->
-            <div class="ls-layer" style="">
-                
-                <!-- Background -->
-                <img src="{% static 'img/Umm_Qais_Nymphaeum_AZ.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
-                    
-                    <!-- Text -->
-                    <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
-                        {% trans 'Endangered Archaeology in the Middle East and North Africa' %} </br>
-                     الآثار المهددة في الشرق الأوسط و شمال إفريقيا  
 
-                    </span>
-                    
-                    <!-- Photo Credit -->
-                    <span class="ls-s-1" style="line-height: 16px; font-size:12px; color:#fff; top:670px; left: 750px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;background-color: #585f69;">
-                        {% trans 'Photo: Nymphaeum (Gadara/Umm Qais, Jordan) ' %}<a href="javascript:void(0);" style='color:#fff;'>{% trans '© Andrea Zerbini' %}</a>
-                    </span>
-                    
-                    </div>
-            <!--End Seventh Slide-->
-            
-          <!--Eighth Slide-->
-            <div class="ls-layer" style="">
-                
-                <!-- Background -->
-                <img src="{% static 'img/Libya_Wadi Matkhandouch1_JN.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
-                    
-                    <!-- Text -->
-                    <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
-                        {% trans 'Endangered Archaeology in the Middle East and North Africa' %} </br>
-                     الآثار المهددة في الشرق الأوسط و شمال إفريقيا  
-
-                    </span>
-                    
-                    <!-- Photo Credit -->
-                    <span class="ls-s-1" style="line-height: 16px; font-size:12px; color:#fff; top:670px; left: 750px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;background-color: #585f69;">
-                        {% trans 'Photo: Rock art in wadi Matkhandouch (Libya) ' %}<a href="javascript:void(0);" style='color:#fff;'>{% trans '© Julia Nikolaus' %}</a>
-                    </span>
-                    
-                    </div>
-            <!--End Eighth Slide-->
-            
-          <!--Ninth Slide-->
-            <div class="ls-layer" style="">
-                
-                <!-- Background -->
-                <img src="{% static 'img/Morocco_Ksar Bounou_NS_Middle_Draa Project.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
-                    
-                    <!-- Text -->
-                    <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
-                        {% trans 'Endangered Archaeology in the Middle East and North Africa' %} </br>
-                     الآثار المهددة في الشرق الأوسط و شمال إفريقيا  
-
-                    </span>
-                    
-                    <!-- Photo Credit -->
-                    <span class="ls-s-1" style="line-height: 16px; font-size:12px; color:#fff; top:670px; left: 750px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;background-color: #585f69;">
-                        {% trans 'Photo: Qasr Bounou (Morocco) ' %}<a href="javascript:void(0);" style='color:#fff;'>{% trans '© The Middle Draa Project - Nichole Sheldrick' %}</a>
-                    </span>
-                    
-                    </div>
-            <!--End Ninth Slide-->
-            
-          <!--Tenth Slide-->
-            <div class="ls-layer" style="">
-                
-                <!-- Background -->
-                <img src="{% static 'img/Tunisia_Carthage_JN.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
-                    
-                    <!-- Text -->
-                    <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
-                        {% trans 'Endangered Archaeology in the Middle East and North Africa' %} </br>
-                     الآثار المهددة في الشرق الأوسط و شمال إفريقيا  
-
-                    </span>
-                    
-                    <!-- Photo Credit -->
-                    <span class="ls-s-1" style="line-height: 16px; font-size:12px; color:#fff; top:670px; left: 750px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;background-color: #585f69;">
-                        {% trans 'Photo: Carthage (Tunisia) ' %}<a href="javascript:void(0);" style='color:#fff;'>{% trans '© Julia Nikolaus' %}</a>
-                    </span>
-                    
-                    </div>
-            <!--End Ninth Slide-->
-          <!--Eleventh Slide-->
-            <div class="ls-layer" style="">
-                
-                <!-- Background -->
-                <img src="{% static 'img/Libya_Ghadames_JN.jpg' %}" class="ls-s3" style="max-width: 2000px !important; top: -50px; left: -550px; durationin: 0;" alt="Slide background">
-                    
-                    <!-- Text -->
-                    <span class="ls-s-1" style="line-height: 42px; font-size:42px; font-weight: 200; color:#fff; top:50px; left: -70px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;">
-                        {% trans 'Endangered Archaeology in the Middle East and North Africa' %} </br>
-                     الآثار المهددة في الشرق الأوسط و شمال إفريقيا  
-
-                    </span>
-                    
-                    <!-- Photo Credit -->
-                    <span class="ls-s-1" style="line-height: 16px; font-size:12px; color:#fff; top:670px; left: 750px; slidedirection: top; slideoutdirection: bottom; durationin: 0; durationout: 3500;background-color: #585f69;">
-                        {% trans 'Photo: Historic buildings in Ghadames (Libya) ' %}<a href="javascript:void(0);" style='color:#fff;'>{% trans '© Julia Nikolaus' %}</a>
-                    </span>
-                    
-                    </div>
-            <!--End Eleventh Slide-->            
             
     
 {% endblock %}
