--- a/arches/app/templates/header.htm
+++ b/arches/app/templates/header.htm
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load i18n %}
+
 <div class="header">
 
     <!-- Topbar -->
@@ -7,32 +8,49 @@
         <div class="container">
             
             <!-- Topbar Message -->
-            <div class="arches-loginbar pull-left">
-
-                <a href="http://www.archesproject.org" class="">
-                    <img src="{% static 'img/PoweredByArches.png' %}" class="powered-by-arches">
-                </a>
-
-            </div>
 
             <!-- Topbar Navigation -->
             <ul class="loginbar pull-right">
                 
-                <li>
-                    <i class="fa fa-globe"></i>
-                    <a>{% trans "Languages" %}</a>
-                    <ul class="lenguages">
+                
+                 <div class="arches-loginbar pull-left">
+                    
+                    <a href="http://www.archesproject.org" class="">
+                        <img src="{% static 'img/PoweredByArches.png' %}" class="powered-by-arches">&nbsp; 
+                            </a>
+                    
+                </div>
+                
+
+
+
+
+                <li class="loginbar pull-right">
+<!--                     <i class="fa fa-globe"></i>
+                    <a>{% trans "Languages" %}</a> -->
+                    
+                    <form action="{% url 'set_language' %}" method="post" id="languageform">
+                    {% csrf_token %}
+                      <input name="next" type="hidden" value="{{ request.get_full_path }}" />
+                      <select name="language">
+
+<!--                     <ul class="lenguages"> -->
+                    {% for language in language_list %}
                         <li class="active">
-                            <a href="javascript:void(0);">{% trans "English" %} <i class="fa fa-check"></i></a> 
+                            <option value="{{ language.languageid }}"{% if language.languageid == LANGUAGE_CODE %} selected="selected"{% endif %}><a href="javascript:void(0);">{{ language.languagename }}<i class="fa fa-check"></i></a> </option>
                         </li>
-                    </ul>
+                    {% endfor %}
+                      </select>&nbsp; 
+                    <input type="submit" value="Change" />
+                    </form>
+<!--                     </ul> -->
                 </li>
-                <li class="topbar-devider"></li>   
-                <li><a href="javascript:void(0);" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="{% trans 'Documentation coming soon.' %}">{% trans "Help" %}</a></li>
-                <li class="topbar-devider"></li>   
+               
+                <li><a href="javascript:void(0);" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="{% trans 'Documentation coming soon.' %}">{% trans "Help" %}</a></li>&nbsp; 
+
                 <li>
                     <a id="auth-link" href="{% url 'auth' %}?next={{ request.get_full_path }}{% if user.username != 'anonymous' %}&logout=true{% endif %}">{% if user.username == 'anonymous' %}{% trans "Login" %}{% else %}{% trans "Welcome" %} {{ user.username }} - {% trans "Logout" %}{% endif %}</a>
-                </li>
+                </li>&nbsp; 
                 
             </ul>
             <!-- End Topbar Navigation -->
@@ -50,12 +68,23 @@
                     <span class="sr-only">{% trans "Toggle navigation" %}</span>
                     <span class="fa fa-bars"></span>
                 </button>
-
-                <!-- Default Logo, Replace with your own -->
                 <a class="navbar-brand" href="{% url 'home' %}">
-                    <img id="logo-header" class="arches-logo" src="{{ STATIC_URL }}img/arches_logo.png" alt="Logo">
+                    <picture>
+                        <img
+                        sizes="(max-width: 767px) calc(100vw - 100px) ,
+                               (max-width: 991px) 286px,
+                               (max-width: 1199px) 350px,
+                               550px"
+                        srcset="
+                        {{ STATIC_URL }}img/responsive/eamena_logo_wqdwpt_c_scale,w_200.jpg 200w,
+                        {{ STATIC_URL }}img/responsive/eamena_logo_wqdwpt_c_scale,w_409.jpg 409w,
+                        {{ STATIC_URL }}img/responsive/eamena_logo_wqdwpt_c_scale,w_578.jpg 578w,
+                        {{ STATIC_URL }}img/responsive/eamena_logo_wqdwpt_c_scale,w_746.jpg 746w,
+                        {{ STATIC_URL }}img/responsive/eamena_logo_wqdwpt_c_scale,w_830.jpg 830w"
+                        src="{{ STATIC_URL }}img/responsive/eamena_logo_wqdwpt_c_scale,w_830.jpg"
+                        alt="Logo">
+                    </picture>
                 </a>
-                
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -96,12 +125,13 @@
                             {% for type, type_data in resource_types %}
                                 <li><a href="{% url 'resource_manager' type type_data.default_page '' %}"><i class="{{type_data.icon_class}}"></i>{{type_data.name}}</a></li>
                             {% endfor %}
+                            <li><a href="{% url 'bulk_upload' %}"><i class="fa fa-upload"></i><strong>Bulk Upload</strong></a></li>
                         </ul>
                     </li>
                     <!-- End Resource Editor -->
 
                      <!-- RDM-->
-                    <li class="{% if active_page = 'RDM' %}active{% endif %}">
+                    <li class="{% if user.is_anonymous %}{% endif %} {% if active_page = 'RDM' %}active{% endif %}">
                         <a href="{% url 'rdm' '' %}">
                             {% trans "RDM" %}
                         </a>
@@ -109,26 +139,7 @@
                     <!-- End RDM-->
                     {% endif %}
 
-                    <!-- Search Block -->
-                    <li>
-                        <i class="search fa fa-search search-btn"></i>
-                        <div class="search-open arches-search">
 
-                            <div class="input-group animated fadeInDown">
-                                <!-- Project Dropdown -->
-                                <div class="col-sm-12">
-                                    <div class="form-group">
-                                        <div class="input-group" id="simple-search">
-                                            <span class="input-group-addon"><i class="fa fa-search text-muted"></i></span>
-                                            {% include "views/simple-search.htm" %}
-                                        </div>
-                                    </div>
-                                </div>  
-                                <!-- End Project Dropdown -->
-                            </div>
-                        </div>    
-                    </li>
-                    <!-- End Search Block -->
                 </ul>
             </div><!--/navbar-collapse-->
         </div>    
@@ -136,3 +147,4 @@
     <!-- End Navbar -->
 
 </div>
+
