--- a/arches/app/templates/base.htm
+++ b/arches/app/templates/base.htm
@@ -3,10 +3,7 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
-{% if debug %}
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':{{ livereload_port }}/livereload.js?snipver=1"></' + 'script>')</script>
-{% endif %}
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 
 <head>
     <title>{% block title %}{{ APP_NAME }}{% endblock %}</title>
@@ -20,7 +17,7 @@
 	{% block css %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'plugins/line-icons/line-icons.css' %}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.1.2/octicons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2-bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -31,17 +28,21 @@
         <link rel="stylesheet" href="{% static 'plugins/openlayers/ol.css' %}">
         <link rel="stylesheet" href="{% static 'css/arches.css' %}">
         <link rel="stylesheet" href="{% static 'css/package.css' %}">
+        <link rel="stylesheet" href="{% static 'css/new-form-style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/eamena.css' %}">
     {% endblock css%}
 
 </head> 
-
-<body class="scroll-y"> 
+{% get_current_language_bidi as LANGUAGE_BIDI %}
+<body class="scroll-y" style="direction: {% if LANGUAGE_BIDI %} rtl; {% else %} ltr; {% endif %}" > 
 
     <div class="wrapper">
+        <div id="full-load-mask" class="form-load-mask" style="margin:0px;background-color: rgba(0, 0, 0, 0.25);z-index:1000;" hidden>
+            <i class="fa fa-spinner fa-spin" style="margin-top:400px;"></i>
+        </div>
     	{% block header %}
             {% include 'header.htm' %}
         {% endblock header %} 
-
 		{% block breadcrumbs %}
         <!--=== Breadcrumbs ===-->
 <!--         <div class="breadcrumbs">
@@ -65,22 +66,18 @@
         {% endblock content %}
         <!--=== End Content Part ===-->
 
-        <!--=== Footer ===-->
-    	{% block footer %}
-            {% include 'footer.htm' %}
-        {% endblock footer %}
-        <!--=== End Footer ===-->
 
-        <!--=== Copyright ===-->
-        {% block copyright %}
-            {% include 'copyright.htm' %}
-        {% endblock copyright %}
-        <!--=== End Copyright ===-->
 
     </div><!--/wrapper-->
 
 	{% block javascript %}
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
+    <script src="{{ STATIC_URL }}js/views/crypto/components/core-min.js"></script>
+    <script src="{{ STATIC_URL }}js/views/crypto/components/cipher-core.js"></script>
+    <script src="{{ STATIC_URL }}js/views/crypto/components/enc-base64.js"></script>
+    <script src="{{ STATIC_URL }}js/views/crypto/components/mode-cfb.js"></script>
+    <script src="{{ STATIC_URL }}js/views/crypto/rollups/aes.js"></script>
     {% block pre_require_js %}
     {% endblock pre_require_js %}
     <script>
@@ -97,7 +94,8 @@
                 'openlayers': '{{ STATIC_URL }}plugins/openlayers/ol',
                 'easing': 'https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min',
                 'backbone': 'https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min',
-                'underscore': 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min',
+                //'underscore': 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min',
+                'underscore': 'https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min',
                 'jquery-validate': 'https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min',
                 'd3': 'https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min',
                 'dropzone': 'https://cdnjs.cloudflare.com/ajax/libs/dropzone/3.8.4/dropzone-amd-module.min',
@@ -110,11 +108,16 @@
                 'shp': 'https://raw.githubusercontent.com/wavded/js-shapefile-to-geojson/master/shapefile',
                 'blueimp-gallery': 'https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.15.2/js/blueimp-gallery',
                 'blueimp-jquery': 'https://blueimp.github.io/Gallery/js/jquery.blueimp-gallery',
-                'blueimp-helper': 'https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.15.2/js/blueimp-helper.min'
+                'blueimp-helper': 'https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.15.2/js/blueimp-helper.min',
+                'gmjs': 'https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBPUB3B5aiHQDVyIuhDqDp500IUCIEDdtM',
+                'Highcharts': 'https://code.highcharts.com/highcharts.src',
             },
             shim: {
                 'openlayers': {
                     exports: 'ol'
+                },
+                'Highcharts': {
+                    exports: 'Highcharts'
                 }
             }
         });
@@ -131,6 +134,7 @@
                         media: "{{ STATIC_URL }}",
                         uploadedfiles: "{{ MEDIA_URL }}",
                         concept_tree: "{% url 'concept_tree' %}",
+                        dropzone_files: "{% url 'resource_manager' resourcetypeid form_id resourceid %}",
                         concept: "{% url 'concept' 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa' %}",
                         concept_search: "{% url 'concept_search' %}",
                         concept_manage_parents: "{% url 'concept_manage_parents' 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa' %}",
@@ -147,6 +151,10 @@
                         buffer: "{% url 'buffer'%}",
                         related_resources: "{% url 'related_resources' 'aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa' %}".replace('aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa', ''),
                         get_admin_areas: "{% url 'get_admin_areas'%}",
+                        user_activity_data: "{% url 'user_activity_data' userid %}",
+                        group_activity_data: "{% url 'group_activity_data' groupid %}",
+                        find_overlapping_data: "{% url 'find_overlapping_data' %}",
+                        resource_manager:  "{% url 'resource_manager' resourcetypeid 'default' resourceid %}"
                     },
                     mapDefaults: {
                         x: {{ map_info.x }},
@@ -162,21 +170,18 @@
                         defaultColor: '{{ map_info.resource_marker_color }}'
                     },
                     bingKey: "{{ map_info.bing_key }}",
-                    bingLayers: [{
-                        id: 'Road',
-                        name: "{% trans 'Streets' %}",
-                        icon: "{% static 'img/map/bing_streets.png' %}"
-                    },
+                    bingLayers: [
                     {
                         id: 'Aerial',
-                        name: "{% trans 'Satellite' %}",
-                        icon: "{% static 'img/map/bing_satellite.png' %}"
+                        name: "{% trans 'Bing Imagery' %}",
+                        icon: "{% static 'img/map/Bing_Sat.png' %}"
                     },
-                    {
-                        id: 'AerialWithLabels',
-                        name: "{% trans 'Streets & Satellite' %}",
-                        icon: "{% static 'img/map/bing_hybrid.png' %}"
-                    }]
+                    {% if 'edit' in user.user_groups %}{
+                        id: 'Road',
+                        name: "{% trans ' Bing Streets' %}",
+                        icon: "{% static 'img/map/Bing_Streets.png' %}"
+                    }{% endif %}],
+                    editor:  {% if 'edit' in user.user_groups %} true {% else %} false {% endif %},
                 };
             });
 
