--- a/eamena/eamena/templates/map.htm
+++ b/eamena/eamena/templates/map.htm
@@ -94,7 +94,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <div class="info-blocks-in margin-bottom-0" >
                                 <p class="margin-top-5">
                                     <span class="arches-map-inventory-footer-text" >
-                                       {% if 'edit' in user.user_groups %} {% trans 'Cursor' %}: <span data-bind="text:mousePosition"></span> <span class="hidden-xs">({% trans 'long,lat' %})</span>{% endif %}
+                                       {% if 'read' in user.user_groups %} {% trans 'Cursor' %}: <span data-bind="text:mousePosition"></span> <span class="hidden-xs">({% trans 'long,lat' %})</span>{% endif %}
                                     </span>
                                 </p>
                             </div>
@@ -106,7 +106,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 <!-- Map: Scaleline--->
                  <div class="row">
                     <div class="col-xs-12" style="">
-                        <div id="scale-line" style = "float: left !important;margin-top:{% if 'edit' in user.user_groups %} -50px;{%else%} -30px;{%endif%}"></div>        
+                        <div id="scale-line" style = "float: left !important;margin-top:{% if 'read' in user.user_groups %} -50px;{%else%} -30px;{%endif%}"></div>        
                     </div>
                 </div>                             
             </div>   
@@ -310,13 +310,14 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <button type="button" class="btn btn-default resource-info-closer">
                                 {% trans 'Close' %}
                             </button>
-                            {% if 'edit' in user.user_groups %}
+                            {% if 'read' in user.user_groups %}
                             <a href="javascript:void(0);" class="text-primary" target="_blank" data-bind="attr:{ href: selectedResource() ? selectedResource().reportLink : 'javascript:void(0);'}">
                                 <button type="button" class="btn btn-primary">
                                     {% trans 'View Report' %}
                                 </button>
                             </a>
-                            
+                            {% endif %}
+                            {% if 'edit' in user.user_groups %}
                             <a href="javascript:void(0);" class="text-primary" target="_blank" data-bind="attr:{ href: selectedResource() ? 'resources/' +  selectedResource().entitytypeid + '/default/' + selectedResource().id : 'javascript:void(0);'}">
                                 <button type="button" class="btn btn-primary">
                                     {% trans 'Edit' %}
