--- a/eamena/eamena/templates/bulk-upload/new.htm
+++ b/eamena/eamena/templates/bulk-upload/new.htm
@@ -46,6 +46,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     {% for type, type_data in resource_types %}
                         <option value="{{type}}">{{type_data.name}}</option>
                     {% endfor %}
+                        <option value="relations">Resource Relationships</option>
                     </select>
                     <div id="restype-msg" class="upload-msg-box" style="color:grey;"></div>
                 </div>
