Changed output from ResourceLoader so that load_id can be passed to a new function that will remove those resources

--- a/arches/app/templates/bulk-upload/new.htm
+++ b/arches/app/templates/bulk-upload/new.htm
@@ -66,7 +66,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <input id="folderupload" type="file" name="attachments[]" data-url="/bulk-upload/attachments" multiple directory webkitdirectory mozdirectory>
                     <div id="folder-msg" class="upload-msg-box" style="color:red;">No file yet...</div>
                     &nbsp;
-                    <button id="folder-upload-btn" class="fileinputs bulk-upload-btn" disabled>Finished</button>
+                    <button id="folder-upload-btn" class="bulk-upload-btn" disabled>Finish</button>
+                    <button id="undo-load-btn" class="bulk-upload-btn" hidden>Cancel</button>
                 </div>
             </div>
             <div class="col-xs-8">
