Improved error messages and button label

--- a/arches/app/templates/bulk-upload/new.htm
+++ b/arches/app/templates/bulk-upload/new.htm
@@ -67,7 +67,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <div id="folder-msg" class="upload-msg-box" style="color:red;">No file yet...</div>
                     &nbsp;
                     <button id="folder-upload-btn" class="bulk-upload-btn" disabled>Finish</button>
-                    <button id="undo-load-btn" class="bulk-upload-btn" hidden>Cancel</button>
+                    <button id="undo-load-btn" class="bulk-upload-btn" hidden>Undo Import</button>
                 </div>
             </div>
             <div class="col-xs-8">
