--- a/arches/app/media/css/eamena.css
+++ b/arches/app/media/css/eamena.css
@@ -390,7 +390,7 @@ input.file {
 
 #upload-log-output {
     height:500px;
-    width: 650px;
+    width: 100%;
     overflow-y:scroll;
     border: 1px solid #e3e3e3;
     background-color: #eeeeee;
