refactor load_id creation; add check status button for bulk uploading

--- a/arches/app/templates/bulk-upload/new.htm
+++ b/arches/app/templates/bulk-upload/new.htm
@@ -61,6 +61,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     <input type="hidden" id="bulk-url" data-url="{% url 'bulk_upload' %}" />
                     <h5>4. Load Resources into EAMENA</h5>
                     <button id="load-data-button" class="bulk-upload-btn" type="button" disabled>Load Resources</button>
+                    <button id="check-status-button" class="bulk-upload-btn" type="button" disabled>Check Status</button>
                     <div id="import-msg" class="upload-msg-box" style="color:red;">Not ready to load...</div>
                 </div>
                 <div id="folder-upload-div" class="bulk-upload-step-box" hidden>
